# infinite-improbability-drive

./: .gitignore  AGENTS.md  CLAUDE.aisp  CLAUDE.md  README.md
.claude-plugin/: plugin.json
agents/: watcher.aisp  watcher.md
commands/: cruise-control.md  spawn-team.md  spawn.md
core/: Cargo.toml
core/src/: backoff.rs  beads.rs  config.rs  debug.rs  error.rs  lib.rs  main.rs  monitor.rs  permissions.rs  pr.rs  prompt.rs  secrets.rs  spawn.rs  team.rs  team_orchestrator.rs  watcher.rs
core/src/cruise/: approval.rs  config.rs  mod.rs  planner.rs  prompts.rs  result.rs  runner.rs  task.rs
core/src/e2e/: fixture.rs  harness.rs  mod.rs  repo.rs  validator.rs
core/src/runner/: claude.rs  gemini.rs  mod.rs
core/src/sandbox/: mod.rs  phase.rs  phase_state.rs  provider.rs  worktree.rs
core/tests/: e2e_test.rs  spawn_integration.rs
core/tests/e2e/fixtures/: code-generation.yaml  full-web-app-github-plan-only.yaml  full-web-app-github.yaml  full-web-app.yaml  full-workflow-simple.yaml  simple-github.yaml  smoke-hello.yaml
core/tests/results/: README.md  full_web_app-2026-02-02.md  full_web_app-2026-02-03.md  full_web_app-latest.md  full_web_app_github-2026-02-03.md  full_web_app_github-2026-02-05.md  full_web_app_github-latest.md  full_web_app_github_plan_only-2026-02-04.md  full_web_app_github_plan_only-latest.md  simple_github-latest.md
docs/: architecture.aisp  architecture.md  configuration.aisp  configuration.md  cruise-control.md  spawn-team.md
docs/plans/: 2026-02-01-cruise-control-design.md  (+10 more)
scripts/: cleanup-e2e-repos.sh
skills/spawn/: SKILL.md
(+7 files in other folders)
