[package]
name = "infinite-improbability-drive"
version = "0.1.0"
edition = "2021"
authors = ["Epiphytic"]
description = "Claude Code plugin for spawning sandboxed LLMs"
license = "MIT"

[lib]
name = "improbability_drive"
path = "src/lib.rs"

[[bin]]
name = "infinite-improbability-drive"
path = "src/main.rs"

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
